--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -1243,7 +1243,7 @@ dt {
 dd {
   margin-left: 0;
 }
-@media (min-width: 992px) {
+@media (min-width: 768px) {
   .dl-horizontal dt {
     float: left;
     width: 160px;
@@ -3284,7 +3284,7 @@ tbody.collapse.in {
   bottom: 100%;
   margin-bottom: 1px;
 }
-@media (min-width: 992px) {
+@media (min-width: 768px) {
   .navbar-right .dropdown-menu {
     left: auto;
     right: 0;
@@ -3816,12 +3816,12 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   margin-bottom: 22px;
   border: 1px solid transparent;
 }
-@media (min-width: 992px) {
+@media (min-width: 768px) {
   .navbar {
     border-radius: 1px;
   }
 }
-@media (min-width: 992px) {
+@media (min-width: 768px) {
   .navbar-header {
     float: left;
   }
@@ -3837,7 +3837,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-collapse.in {
   overflow-y: auto;
 }
-@media (min-width: 992px) {
+@media (min-width: 768px) {
   .navbar-collapse {
     width: auto;
     border-top: 0;
@@ -3877,7 +3877,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   margin-right: -15px;
   margin-left: -15px;
 }
-@media (min-width: 992px) {
+@media (min-width: 768px) {
   .container > .navbar-header,
   .container-fluid > .navbar-header,
   .container > .navbar-collapse,
@@ -3890,7 +3890,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   z-index: 1000;
   border-width: 0 0 1px;
 }
-@media (min-width: 992px) {
+@media (min-width: 768px) {
   .navbar-static-top {
     border-radius: 0;
   }
@@ -3902,7 +3902,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   left: 0;
   z-index: 1030;
 }
-@media (min-width: 992px) {
+@media (min-width: 768px) {
   .navbar-fixed-top,
   .navbar-fixed-bottom {
     border-radius: 0;
@@ -3931,7 +3931,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-brand > img {
   display: block;
 }
-@media (min-width: 992px) {
+@media (min-width: 768px) {
   .navbar > .container .navbar-brand,
   .navbar > .container-fluid .navbar-brand {
     margin-left: -15px;
@@ -3961,7 +3961,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-toggle .icon-bar + .icon-bar {
   margin-top: 4px;
 }
-@media (min-width: 992px) {
+@media (min-width: 768px) {
   .navbar-toggle {
     display: none;
   }
@@ -3974,7 +3974,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   padding-bottom: 10px;
   line-height: 22px;
 }
-@media (max-width: 991px) {
+@media (max-width: 767px) {
   .navbar-nav .open .dropdown-menu {
     position: static;
     float: none;
@@ -3996,7 +3996,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
     background-image: none;
   }
 }
-@media (min-width: 992px) {
+@media (min-width: 768px) {
   .navbar-nav {
     float: left;
     margin: 0;
@@ -4070,7 +4070,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
     top: 0;
   }
 }
-@media (max-width: 991px) {
+@media (max-width: 767px) {
   .navbar-form .form-group {
     margin-bottom: 5px;
   }
@@ -4078,7 +4078,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
     margin-bottom: 0;
   }
 }
-@media (min-width: 992px) {
+@media (min-width: 768px) {
   .navbar-form {
     width: auto;
     border: 0;
@@ -4117,14 +4117,14 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   margin-top: 29px;
   margin-bottom: 29px;
 }
-@media (min-width: 992px) {
+@media (min-width: 768px) {
   .navbar-text {
     float: left;
     margin-left: 15px;
     margin-right: 15px;
   }
 }
-@media (min-width: 992px) {
+@media (min-width: 768px) {
   .navbar-left {
     float: left !important;
   }
@@ -4191,7 +4191,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   background-color: #e7e7e7;
   color: #555555;
 }
-@media (max-width: 991px) {
+@media (max-width: 767px) {
   .navbar-default .navbar-nav .open .dropdown-menu > li > a {
     color: #777777;
   }
@@ -4287,7 +4287,7 @@ fieldset[disabled] .navbar-default .btn-link:focus {
   background-color: #020b0f;
   color: #ffffff;
 }
-@media (max-width: 991px) {
+@media (max-width: 767px) {
   .navbar-inverse .navbar-nav .open .dropdown-menu > .dropdown-header {
     border-color: #083851;
   }
@@ -6313,6 +6313,17 @@ button.close {
 }
 input.lobbysearch {
   font-size: 18px;
+  border: 0px;
+  padding: 15px;
+  height: 45px;
+}
+.btn-lobbysearch {
+  height: 45px;
+  width: 55px;
+  background: white;
+  z-index: 999;
+  border: 0px;
+  color: #1b4c64;
 }
 .videoWrapper {
   position: relative;
@@ -6329,11 +6340,7 @@ input.lobbysearch {
   height: 100%;
 }
 .bg-gradient,
-body,
-.abspann-page,
-.faq-page,
-.about-page,
-.faq-page {
+body {
   background: #11354b;
   /* Old browsers */
   background: -moz-linear-gradient(top, #11354b 0%, #a1bdc9 65%, #a1bdc9 77%, #6392a8 100%);
@@ -6362,78 +6369,127 @@ body,
 .close span {
   color: #333!important;
 }
+.nav-circle {
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+  box-shadow: 0px 0px 25px #1b4c64;
+  background: #1b4c64;
+}
+.circle-nav {
+  padding: 22px 0 18px 18px;
+}
+.nav-circle.small {
+  width: 40px;
+  height: 40px;
+  float: right;
+  display: inline-block;
+  margin-left: 10px;
+  font-size: 18px!important;
+  padding: 8px 12px;
+  color: white;
+  background: #fa7e00;
+}
+.nav-circle.small a {
+  color: white;
+  font-size: 18px!important;
+  margin: 0px!important;
+}
+.nav-circle.small a:hover {
+  color: #613100;
+}
+.nav-circle.big {
+  text-align: center;
+  width: 260px;
+  height: 260px;
+  padding: 30px 15px;
+  color: white;
+  border: 2px solid white;
+}
+.nav-circle.big p {
+  font-size: 90%;
+}
+.nav-circle.big h2 {
+  font-size: 16px;
+}
+.nav-circle.big .nav-circle.small {
+  float: left;
+  margin-top: -20px;
+}
 .zdf-header-blue {
-  height: 82px;
-}
-.zdf-header-blue .search-form {
-  margin-bottom: 20px;
-  margin-top: 19px;
-}
-.zdf-header-blue .search-form .form-control {
-  height: 42px;
-}
-.zdf-header-blue .search-form input {
-  padding-top: 5px;
-  border: 0px;
-  border-radius: 0px;
-}
-.zdf-header-blue .search-form .input-group-btn button {
-  height: 42px;
-}
-.miz-logo {
-  float: left!important;
-  margin-top: 10px;
-  max-width: 140px;
-}
-.zdf-header-blue {
+  min-height: 60px;
+  height: 60px;
   top: 46px;
   position: absolute;
   z-index: 1030;
   width: 100%;
-  overflow: hidden;
-  background: rgba(20, 59, 82, 0.5);
+  background: rgba(20, 59, 82, 0.9);
+  border: 0px;
   border-bottom: 1px solid #143b52;
+  margin-bottom: 0px;
 }
-.zdf-header-blue h1 {
+.zdf-header-blue .navbar-toggle {
+  margin: 6px;
+  border: 0px;
   color: white;
+  font-size: 24px;
+}
+.zdf-header-blue .navbar-toggle .icon-bar {
+  background-color: white;
+}
+.zdf-header-blue .navbar-collapse {
+  border-top: 0px;
+}
+.zdf-header-blue .navbar-collapse.in,
+.zdf-header-blue .navbar-collapse.collapsing {
+  background-color: #7b7b7b;
+}
+.zdf-header-blue ul.nav a {
+  color: white;
+  margin: 13px;
+  padding: 0px;
+  font-size: 14px;
 }
 .zdf-header-blue .logo-name {
+  padding: 3px 0px;
+  height: 30px;
+  margin-left: 15px!important;
   padding: 5px 0px;
   color: white;
   font-size: 32px;
   font-family: "Arial";
   text-align: center;
-  width: 100%;
   float: left;
 }
 .zdf-header-blue .logo-name img {
-  margin: 25px 0px 0px 0px;
-}
-.zdf-header-blue .logo-name .fa-stack {
-  display: none;
-}
-.zdf-header-blue .logo-name .fa-bullseye {
-  color: rgba(255, 255, 255, 0.3);
-  position: relative;
-  margin: -91px 0px 0px -79px;
-  float: left;
-}
-.zdf-header-blue .logo-name .symbol {
-  color: #ffffff;
-  position: absolute;
-  margin: -30px;
-  float: left;
+  width: 200px;
+  display: inline;
+  margin: 17px 0px 0px 0px;
 }
 @media (min-width: 768px) {
+  .zdf-header-blue {
+    height: 82px;
+  }
   .zdf-header-blue .logo-name {
-    text-align: left;
+    margin-right: 25px;
+  }
+  .zdf-header-blue .logo-name img {
+    width: 250px;
+    margin: 25px 0 0 0;
+  }
+  .zdf-header-blue .miz-logo {
+    float: left!important;
+    margin-top: 33px;
+    max-width: 150px;
+  }
+  .zdf-header-blue .miz-logo img {
+    max-width: 200px;
+    height: auto;
   }
 }
-@media (max-width: 767px) {
-  .zdf-header-blue {
-    position: relative!important;
-    top: auto;
-  }
+.social-links a {
+  float: left;
+  margin-right: 5px;
 }
 .share-button.site-share.sharer-0 .social.networks-5.center {
   margin-left: -135px !important;
@@ -6473,17 +6529,17 @@ body,
   margin-bottom: 0px;
 }
 .zdf-header-grey .miz-logo {
-  width: 80px;
+  width: 130px;
   height: auto;
   float: left;
-  margin-top: 5px;
-  margin-left: 10px;
+  margin-top: 15px;
+  margin-left: 15px;
 }
 .zdf-header-grey .navbar-toggle {
   border: 0px;
 }
 .zdf-header-grey .navbar-brand {
-  margin-left: 0px!important;
+  margin-left: 10px!important;
 }
 .zdf-header-grey .navbar-brand img.zdf-logo-lobbyradar {
   width: 150px;
@@ -6573,6 +6629,12 @@ body,
     top: auto;
   }
 }
+.intro {
+  margin-top: 13%;
+}
+.intro .nav-circle.big {
+  margin: 0 auto 30px auto;
+}
 .overlay {
   background: rgba(12, 12, 12, 0.85);
   width: 100%;
@@ -6595,51 +6657,33 @@ body,
     margin-top: 150px;
   }
 }
-.abspann-page,
-.faq-page,
-.about-page {
-  background-position: fixed!important;
-  min-height: 100%;
-}
-.abspann-page p,
-.faq-page p,
-.about-page p,
-.abspann-page h1,
-.faq-page h1,
-.about-page h1,
-.abspann-page h2,
-.faq-page h2,
-.about-page h2,
-.abspann-page h3,
-.faq-page h3,
-.about-page h3,
-.abspann-page h4,
-.faq-page h4,
-.about-page h4,
-.abspann-page h5,
-.faq-page h5,
-.about-page h5,
-.abspann-page h6,
-.faq-page h6,
-.about-page h6,
-.abspann-page .panel-body,
-.faq-page .panel-body,
-.about-page .panel-body {
+.static-page {
+  height: 100%;
+  min-height: 768px;
+  width: 100%;
   color: white;
 }
-@media (min-width: 992px) {
-  .abspann-page,
-  .faq-page,
-  .about-page {
-    padding-top: 130px;
-  }
+.static-page p,
+.static-page h1,
+.static-page h2,
+.static-page h3,
+.static-page h4,
+.static-page h5,
+.static-page h6,
+.static-page .panel-body {
+  color: white;
 }
-.faq-page {
-  min-height: 100%;
+.home-page {
+  background: url(/assets/images/bg-home.png) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+}
+@media (min-width: 768px) {
+  .static-page {
+    padding-top: 130px;
+  }
 }
 .faq-page .panel-group {
   margin-top: 20px!important;
@@ -6671,7 +6715,10 @@ body,
   color: #111;
 }
 .fullscreen {
+  width: 100%;
+  height: 100%;
   margin-top: 0px;
+  padding-top: 20px;
   margin-bottom: -20px;
   position: fixed;
   overflow: scroll;
@@ -6697,6 +6744,11 @@ body,
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+}
+@media (min-width: 768px) {
+  .fullscreen {
+    padding-top: 0px;
+  }
 }
 #networkviz-wrapper {
   position: fixed;
@@ -6776,6 +6828,7 @@ body,
   z-index: 99!important;
   background: white;
   color: #333;
+  margin-top: 5px;
 }
 .row-results {
   border-bottom: 1px solid #CCC;
@@ -6791,6 +6844,7 @@ body,
   background: white;
   color: #333;
   padding: 19px;
+  margin-top: 5px;
   z-index: 99!important;
 }
 .result-single #backtolist {
