--- a/assets/views/about.mustache
+++ b/assets/views/about.mustache
@@ -1,22 +1,6 @@
 {{>header}}
 {{>nav-grey}}
-<div class="zdf-header-blue">
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-3 col-xs-12 hidden-xs">
-        <a class="logo-name" href="/">    
-          <img class="zdf-logo-lobbyradar" src="/assets/images/zdf-lobbyradar-logo.svg" onerror="this.src='/assets/images/zdf-lobbyradar-logo.png';this.onerror=null;" alt="ZDF" width="240" height="auto">
-        </a>
-      </div>
-      <div class="col-sm-2 hidden-xs">
-        <img class="miz-logo" src="/assets/images/logo-miz.png" alt="MIZ" width="auto" height="60">
-      </div>
-      <div class="col-sm-6 col-sm-offset-1 col-xs-12">
-        <h1 class="text-right">Über das Projekt</h1>
-      </div>
-    </div>
-  </div>
-</div>
+{{>nav-blue}}
 
 <div class="about-page static-page">
 
