--- a/assets/views/intro.mustache
+++ b/assets/views/intro.mustache
@@ -1,34 +1,30 @@
+{{>header}}
+{{>nav-grey}}
+{{>nav-blue}}
+<div class="static-page">
 <div class="container">
 	
 	<div class="row">
-		<div class="col-sm-6">
+		<div class="col-sm-8 col-sm-offset-2">
 			<br/><br/>
 
 			<div class="videoWrapper">
 				<iframe width="560" height="315" src="//www.youtube.com/embed/tA-E_38oWLI" frameborder="0" allowfullscreen></iframe>
 			</div>
-						<h1>Wer will was, und von wem?</h1>
-			<p class="intro-copy">
-				Curabitur blandit tempus porttitor. Maecenas sed diam eget risus varius blandit sit amet non magna. Maecenas sdiam eget risus varius blandit sit amet non magna. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatvestibulum.
-			</p>
+				
 		</div>
 		
-		<div class="col-sm-6">
-		<p class="text-center hidden-xs">
-		<br/>
-		<i class="fa fa-long-arrow-up" style="font-size: 2.8em;"></i><br/>
-		</p>
-			<h1> 
-				Suche jetzt direkt nach Akteuren des politischen Lobbyismus
-			</h1>
-			 <p>und erforsche die Verbindungen, oder lade dir die Erweiterung für deinen Browser runter!</p><br/>
-					<p class="text-center hidden-xs">
-
-<i class="fa fa-long-arrow-down" style="font-size: 2.8em;"></i></p>
-			<button class="hidden-xs btn-ext center-block btn btn-lg btn-info" data-toggle="modal" data-target="#Extensions">
-				Installier dir den Durchblick!
-			</button><br/>
-		</div>
 	</div>
+	<div class="row">
+		<div class="col-sm-8 col-sm-offset-2">
+		<h1>Wer will was, und von wem?</h1>
+			<p class="intro-copy">
+				Curabitur blandit tempus porttitor. Maecenas sed diam eget risus varius blandit sit amet non magna. MaecenasVivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Aenean lacinia bibendum nulla sed consectetur. Sed posuere consectetur est at lobortis. Nullam id dolor id nibh ultricies vehicula ut id elit.
 
-</div>
+Donec ullamcorper nulla non metus auctor fringilla. Nulla vitae elit libero, a pharetra augue. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. sdiam eget risus varius blandit sit amet non magna. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatvestibulum.
+			</p>
+					</div>
+		
+	</div>
+</div></div>
+{{>footer}}
