--- a/assets/views/nav-blue.mustache
+++ b/assets/views/nav-blue.mustache
@@ -1,24 +1,110 @@
-<div class="zdf-header-blue">
+<div class="zdf-header-blue navbar navbar-default">
+
 	<div class="container">
+
+
+		<!-- Brand and toggle get grouped for better mobile display -->
+		<div class="navbar-header">
+
+			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+				<span class="sr-only">Toggle navigation</span>
+				<i class="fa fa-bars"></i>
+			</button>
+
+			
+				<a class="navbar-brand logo-name" href="/">    
+					<img class="zdf-logo-lobbyradar img-responsive" src="/assets/images/zdf-lobbyradar-logo.svg" onerror="this.src='/assets/images/zdf-lobbyradar-logo.png';this.onerror=null;" alt="ZDF" >
+				</a>
+								<a class="miz-logo" href="/">    
+
+			<img class="hidden-xs" src="/assets/images/logo-miz.png" alt="MIZ" width="auto" height="60">
+</a>
+
+		</div>
+
+		<!-- Collect the nav links, forms, and other content for toggling -->
+		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+			<ul class="nav navbar-nav navbar-right">
+				<div class="circle-nav">
+
+					<div class="nav-circle small">
+						<a href="/app"><i class="fa fa-sitemap"></i></a>
+					</div>
+
+					<div class="nav-circle small">
+						<a href="http://www.heute.de" target="_blank"><i class="fa fa-newspaper-o"></i></a>
+					</div>
+
+					<div class="nav-circle small">
+						<a href="/extension"><i class="fa fa-download"></i></a>
+					</div>
+
+					<div class="nav-circle small">
+						<a href="/intro"><i class="fa fa-video-camera"></i></a>
+					</div>
+
+				</div>
+				<div class="visible-xs-block">
+
+				<li><a href="/faq">FAQ & Hilfe</a></li>
+				<li><a href="/about">Über das Projekt</a></li>
+				<li><a href="/abspann">Abspann</a></li>
+														<li><a href="http://www.heute.de/" target="_blank">ZDFheute</a></li>
+
+				<li class="social-links">
+					<a href="#"><i class="fa fa-facebook"></i></a>
+					<a href="#"><i class="fa fa-twitter"></i></a>
+					<a href="#"><i class="fa fa-google-plus"></i></a>
+					<a href="#"><i class="fa fa-envelope"></i></a>
+
+				</li>
+
+		</div>
+			</ul>
+
+		</div><!-- /.navbar-collapse -->
+
+<!--
 		<div class="row">
+
 			<div class="col-sm-3 col-xs-12 hidden-xs">
+
 				<a class="logo-name" href="/">    
 					<img class="zdf-logo-lobbyradar img-responsive" src="/assets/images/zdf-lobbyradar-logo.svg" onerror="this.src='/assets/images/zdf-lobbyradar-logo.png';this.onerror=null;" alt="ZDF" >
 				</a>
+
 			</div>
-			<div class="col-sm-2 hidden-xs">
+
+			<div class="col-sm-3 hidden-xs">
 				<img class="miz-logo img-responsive" src="/assets/images/logo-miz.png" alt="MIZ" >
 			</div>
-			<div class="col-sm-6 col-sm-offset-1 col-xs-12">
-				<form class="search-form" role="form">
-					<div class="input-group">
-						<input type="text" placeholder="Suchen Sie nach Politikern, Firmen und Journalisten" class="lobbysearch form-control">
-						<span class="input-group-btn">
-							<button class="btn btn-primary" type="button"><i class="fa fa-search"></i></button>
-						</span>
+
+			<div class="col-sm-4 col-sm-offset-2 ">
+
+				<div class="circle-nav">
+
+					<div class="nav-circle small">
+						<a href="/app"><i class="fa fa-sitemap"></i></a>
 					</div>
-				</form>
+
+					<div class="nav-circle small">
+						<a href="http://www.heute.de" target="_blank"><i class="fa fa-newspaper-o"></i></a>
+					</div>
+
+					<div class="nav-circle small">
+						<a href="/extension"><i class="fa fa-download"></i></a>
+					</div>
+
+					<div class="nav-circle small">
+						<a href="/intro"><i class="fa fa-video-camera"></i></a>
+					</div>
+
+				</div>
+
 			</div>
+
 		</div>
+ -->
 	</div>
+
 </div>
